<resources>
    <string name="app_name">ㅇㅇ도서관</string>
    <string name="text_title">책 제목</string>
    <string name="text_author">지은이</string>
    <string name="text_publisher">출판사</string>
    <string name="text_summary">줄거리</string>
    <string name="btn_input">입력</string>
    <string name="btn_search">검색</string>
    <string name="btn_rental">대출</string>
    <string name="search_result">도서검색결과</string>
    <string name="detail_info">상세정보</string>
</resources>